[gd_scene load_steps=11 format=3 uid="uid://bgvt4l3hon0gj"]

[ext_resource type="Script" path="res://scripts/parasite.gd" id="1_6an73"]
[ext_resource type="Texture2D" uid="uid://b7hpo5n5nkrjc" path="res://scenes/ElectronicGames_Parasite.png" id="2_igeb4"]

[sub_resource type="Animation" id="Animation_78um3"]
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.3, 0.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 5, 3, 2, 1, 6]
}

[sub_resource type="Animation" id="Animation_qn3l7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.3, 0.3)]
}

[sub_resource type="Animation" id="Animation_rr52u"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_hqpcc"]
resource_name = "Shrink"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(0.01, 0.01)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_nyn0l"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cm14m"]
_data = {
"Idle": SubResource("Animation_78um3"),
"RESET": SubResource("Animation_qn3l7"),
"Remenant": SubResource("Animation_rr52u"),
"Shrink": SubResource("Animation_hqpcc"),
"Unpowered": SubResource("Animation_nyn0l")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_g0ulp"]
radius = 10446.9

[sub_resource type="CircleShape2D" id="CircleShape2D_pmakv"]
radius = 36.6667

[node name="Parasite" type="Node2D"]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_6an73")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_igeb4")
hframes = 3
vframes = 3
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/asepritefiles/ElectronicGames_Parasite.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "88c79e0b275d2bd75de29c4afc57c1cd"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cm14m")
}
autoplay = "Idle"

[node name="SearchZone" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchZone"]
shape = SubResource("CircleShape2D_g0ulp")

[node name="CatchZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchZone"]
position = Vector2(0, -6.66667)
shape = SubResource("CircleShape2D_pmakv")

[connection signal="body_entered" from="SearchZone" to="." method="_on_search_zone_body_entered"]
[connection signal="body_exited" from="SearchZone" to="." method="_on_search_zone_body_exited"]
[connection signal="body_entered" from="CatchZone" to="." method="_on_catch_zone_body_entered"]
